validation for past shows, and eticket formatting